--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
     "three": "^0.153.0",
     "web-vitals": "^2.1.4"
